# geoapps-utils

./: .codeclimate.yml  .coveragerc  .gitignore  .pre-commit-config.yaml  Install_or_Update.bat  LICENSE  README-dev.rst  README.rst  THIRD_PARTY_SOFTWARE.rst  conda-py-3.10-lock.yml  conda-py-3.9-lock.yml  deps-lock-config.yaml  meta.yaml  py-3.10.conda-lock.yml  py-3.11.conda-lock.yml  py-3.12.conda-lock.yml  py-3.9.conda-lock.yml  pylintrc  pyproject.toml
.github/: dependabot.yml
.github/workflows/: pytest-unix-os.yaml  pytest-windows.yaml  python_analysis.yml  python_deploy_dev.yml  python_deploy_prod.yml  static-analysis.yml
devtools/: add_url_tag_sha256.py  check-copyright.py  create_application_files.py  git_message_hook.py  run_conda_lock.py  setup-conda-base.bat  setup-dev.bat  start-app.bat
environments/: conda-py-3.10-linux-64-dev.lock.yml  conda-py-3.10-linux-64.lock.yml  conda-py-3.10-osx-64-dev.lock.yml  conda-py-3.10-osx-64.lock.yml  conda-py-3.10-win-64-dev.lock.yml  conda-py-3.10-win-64.lock.yml  conda-py-3.9-linux-64-dev.lock.yml  conda-py-3.9-linux-64.lock.yml  conda-py-3.9-osx-64-dev.lock.yml  conda-py-3.9-osx-64.lock.yml  conda-py-3.9-win-64-dev.lock.yml  conda-py-3.9-win-64.lock.yml  py-3.10-linux-64-dev.conda.lock.yml  py-3.10-linux-64.conda.lock.yml  py-3.10-win-64-dev.conda.lock.yml  py-3.10-win-64.conda.lock.yml  py-3.11-linux-64-dev.conda.lock.yml  py-3.11-linux-64.conda.lock.yml  py-3.11-win-64-dev.conda.lock.yml  py-3.11-win-64.conda.lock.yml  py-3.12-linux-64-dev.conda.lock.yml  py-3.12-linux-64.conda.lock.yml  py-3.12-win-64-dev.conda.lock.yml  py-3.12-win-64.conda.lock.yml  py-3.9-linux-64-dev.conda.lock.yml  py-3.9-linux-64.conda.lock.yml  py-3.9-win-64-dev.conda.lock.yml  py-3.9-win-64.conda.lock.yml
geoapp_utils/base/: application.py  selection.py
geoapp_utils/driver_base/: driver.py  params.py  utils.py
geoapp_utils/shared_utils/: __init__.py  utils.py
geoapp_utils/utils/: formatters.py  geophysical_systems.py  list.py  string.py  workspace.py
geoapps_utils/: __init__.py  conversions.py  formatters.py  geophysical_systems.py  importing.py  iterables.py  locations.py  numerical.py  plotting.py  transformations.py  workspace.py
geoapps_utils-assets/: __init__.py
geoapps_utils-assets/uijson/: base.ui.json
geoapps_utils/application/: __init__.py  application.py  dash_application.py  layout.py  selection.py
geoapps_utils/driver/: __init__.py  data.py  driver.py  params.py
geoapps_utils/utils/: __init__.py  conversions.py  formatters.py  importing.py  iterables.py  locations.py  numerical.py  plotting.py  transformations.py  workspace.py
my_app/: main.py
tests/: __init__.py  conftest.py  conversions_test.py  dataclass_test.py  driver_test.py  formatters_test.py  geophysical_systems_test.py  importing_test.py  iterables_test.py  locations_test.py  numerical_test.py  plotting_test.py  transformations_test.py  utils_test.py  version_test.py
